@@ -1,3 +1,15 @@
+2004-12-11  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b306
+
+	* New: Added support for exiftags.
+	  - Added function getExifDisplayTool()
+	  - Adjust function getExif()
+	  - Adjust getItemCaptureDate()
+	  - Added exiftags to confiwizard. (Bumped config version)
+
+	 Note: So exiftags is only used in above cases ! (e.g. not for autorotation.)
+
+	* Change: Tweaked optionals tools in config.
+
 2004-12-10  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b305
 
 	* Fix: function getImVersion introduced in b300 was total b0rked. (Sorry.)
